--- a/css/6-components/card.css
+++ b/css/6-components/card.css
@@ -96,7 +96,7 @@
 }
 
 .card[aria-expanded="true"] .card__media img {
-	height: 40vh;
+	height: calc(57 * 90vw / 100); /* 100:57 aspect ratio */
 }
 
 .card__footer {
@@ -110,6 +110,10 @@
 	.card__media img {
 		width: 70vw;
 	}
+
+	.card[aria-expanded="true"] .card__media img {
+		height: calc(57 * 70vw / 100); /* 100:57 aspect ratio */
+	}
 }
 
 @media only screen and (min-device-width: 1000px) {
@@ -118,6 +122,6 @@
 	}
 
 	.card[aria-expanded="true"] .card__media img {
-		height: 50vh;
+		height: calc(57 * 50vw / 100); /* 100:57 aspect ratio */
 	}
 }
